--- a/src/main/resources/static/css/prod_wrapper.css
+++ b/src/main/resources/static/css/prod_wrapper.css
@@ -1,139 +1,111 @@
-.product-wrapper {
-    display: block;
-    width: 100%;
-    float: left;
-    transition: width .2s;
-}
 
-@media only screen and (min-width: 450px) {
-    .product-wrapper {
-        width: 50%;
-    }
-}
-
-@media only screen and (min-width: 768px) {
-    .product-wrapper {
-        width: 33.333%;
-    }
-}
-
-@media only screen and (min-width: 1000px) {
-    .product-wrapper {
-        width: 25%;
-    }
-}
-
-.product {
-    display: block;
-    border: 1px solid #b5e9a7;
-    border-radius: 3px;
+.search{
     position: relative;
-    background: #fff;
-    margin: 0 20px 20px 0;
-    text-decoration: none;
-    color: #474747;
-    z-index: 0;
-    height: 400px;
-    /*width: 300px;*/
+    padding: 20px 0px;
 }
 
-.revie_wrap{
-    height: 200px;
-    width: 100%;
-}
-
-.prod-wrapper{
-
-    width: 70%;
-    height: auto;
-    margin-left: 180px;
-}
-
-.product-photo {
-    position: relative;
-    padding-bottom: 100%;
-    overflow: hidden;
-}
-
-.product-photo img {
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    max-width: 100%;
-
-    margin: auto;
-    transition: transform .4s ease-out;
-}
-
-.product:hover .product-photo img {
-    transform: scale(1.05);
-}
-
-.product-buttons-wrap {
-    width: 100%;
-    height: 100%;
-    margin-top: 10px;
-
-}
-
-
-.button {
-    width: 150px;
-    display: table;
-    margin: 0 auto;
+.search__prod{
     height: 35px;
+    width: 100%;
+    padding: 0px 10px;
+}
+
+.sort{
     position: relative;
-    top: -1px;
-    background: #fff;
-    box-shadow: 0 0 20px rgba(0, 0, 0, .5);
-    border: 1px solid #56bd4b;
-    border-radius: 3px;
-    overflow: hidden;
-    text-align: center;
-    font-size: 16pt;
+    padding: 20px 0px;
+}
+.sort__wrap{
+    height: 35px;
+    width: 100%;
     cursor: pointer;
 }
 
-
-
-.product p {
-    position: relative;
-    margin: 0;
-    font-size: 1em;
-    line-height: 1.em;
-    height: 0.6em;
-    overflow: hidden;
-    padding: 10px;
-    font-size: 11pt;
+.sort_prod:hover{
+    background-color: red;
 }
 
-.product p:after {
-    content: '';
-    display: inline-block;
-    position: absolute;
-    bottom: 0;
-    right: 0;
-    width: 4.2em;
-    height: 1.6em;
-    background: linear-gradient(to left top, #fff, rgba(255, 255, 255, 0));
+
+.wrapper{
+
+
+
 }
 
-.price{
-    margin-top: 30px;
-    margin-left: 10px;
-    font-weight: 600;
+.wrapper__prod{
+
+    height: 430px;
+    background-color: white;
+    margin: 10px 10px;
+    padding: 0px;
 }
 
-.name-wrap{
-    width: auto;
-    margin-top: 5px;
+.wrapper__prod:hover{
+    box-shadow: 0px 0px 15px 3px rgba(145,132,133,0.75);
 }
-.name{
-    margin-left: 10px;
+
+
+
+.wrapper__prod__img{
+    width: 100%;
+    height: 200px;
+    background-color: transparent;
+}
+
+.wrapper__prod__name{
     text-align: center;
-    font-size: 18pt;
+    font-family: 'Merriweather', serif;
+    font-size: 20px;
+    display: block;
+    height: auto;
+    color: black;
+    padding: 5px 15px;
 }
 
+.wrapper__prod:hover .wrapper__prod__name{
+    color: #9bbc15;
+}
 
+.wrapper_prod_desc{
+    width: 100%;
+    height: 68px;
+    padding: 0px 20px;
+    overflow: hidden;
+    font-size: 14px;
+    color: black;
+}
+
+.wrapper__prod__but{
+    bottom: 10px;
+    width: 80%;
+    height: 40px;
+    background-color: white;
+    position: absolute;
+    border: 1px solid #8c9f3f;
+    color: #9bbc15;
+    border-radius: 3px;
+    font-family: 'PT Sans Caption', sans-serif;
+    font-size: 16px;
+    margin-left: 9%;
+}
+
+.wrapper__prod__but:hover{
+    background-color: #9bbc15;
+    color: white;
+    font-family: 'PT Sans Caption', sans-serif;
+    border-radius: 3px;
+    font-size: 16px;
+}
+
+.wrapper__prod__price{
+    font-size: 20px;
+    font-weight: 900;
+    text-align: right;
+    margin-right: 19px;
+    padding-top: -10px;
+    display: block;
+    color: black;
+    bottom: 68px;
+    position: absolute;
+    right: 1px;
+
+}
